# public_rest

./: openapi-schema.yml  pyproject.toml
config/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
